header alignement fix

--- a/skiel.css
+++ b/skiel.css
@@ -22,6 +22,10 @@ a:hover, a:active {
   text-decoration: underline;
 }
 
+.col3 {
+  width: 33%;
+}
+
 main {
   width: 90%;
   margin: 25px auto 2em;
@@ -92,7 +96,7 @@ header {
 #titles {
   list-style: none;
   padding-left: 0;
-  margin: 30px 0 0 36px;
+  margin: 30px 0 0 50px;
   font-size: 20px;
   line-height: 0;
 }
